# CryptoStrat_Internship

./: .gitignore  .gitmodules  README.md  basic_plots.ipynb  btc_heartbeat.py  historic.csv  historic_data.py  ladder.md
coinbase/: README.md
coinbase/analysis/: README.md
coinbase/analysis/generator/: __main__.py
coinbase/connector/cpp/: README.md
coinbase/connector/data_dumps/: full.out  matches.out  ticker.out
coinbase/connector/examples/: order_feed.py  ticker.py
coinbase/connector/infrastructure/: channel.py
coinbase/connector/requests/: all.json  full.json  level2.json  ticker.json
coinbase/connector/socks/: tester.py
coinbase/connector/timing_analysis/: Timing_Coinbase_Client_FirstPass.ipynb
connector/: __main__.py  app.py
connector/cpp/: README.md
connector/cpp/bak/: gav_clt.cpp  main.cpp.bak  main_basic.cpp.bak
connector/cpp/client-async/: CMakeLists.txt  main.cpp  ore.hpp
connector/cpp/client-sync/: CMakeLists.txt  epoch_converter.hpp  helpers.hpp  main.cpp  main.cpp.bak  main.cpp.linker_errors  main.cpp.nlohmann  ore.hpp  root_certificates.hpp
connector/cpp/client-sync/client-sync/: CMakeLists.txt  CMakeLists.txt.crypto
connector/cpp/coinbase/: CMakeLists.txt  helpers.hpp  main.cpp
connector/cpp/server/: CMakeLists.txt  main.cpp
connector/data_dumps/: all.out  historic.csv  level2.out
connector/requests/: matches.json
connector/socks/: clk.py  tester.py
connector/socks/auto/: clt.py  functiontrace.2020-07-02-01:14:43.235.json  functiontrace.2020-07-07-17:11:15.197.json  functiontrace.latest.json  gav_srv.py  msgpack.out  srv.py
connector/socks/functiontraces/: functiontrace.2020-07-01-16:43:18.958.json  functiontrace.2020-07-01-19:05:02.815.json
connector/socks/websock/: clt.py  srv.py
data_dumps/: tickers.py
kraken/: .gitignore  Dockerfile  Jenkinsfile  README.md  cli.py  client.py  driver.py  handler.py  listener.py  main.py  secret.py  setup.py  util.py
kraken/5min/: snapshot_b0.txt  snapshot_b1.txt  snapshot_b2.txt  snapshot_b3.txt  snapshot_b4.txt  snapshot_c0.txt
kraken/60min/: notes.txt  snapshot_a0.txt  snapshot_a2.txt  snapshot_a5.txt  snapshot_b0.txt  snapshot_b1.txt  snapshot_b2.txt  snapshot_b3.txt  snapshot_b4.txt  snapshot_b5.txt  snapshot_b6.txt  snapshot_b9.txt  snapshot_c2.txt  snapshot_c5.txt  snapshot_c7.txt  snapshot_c8.txt
kraken/60min_3sinks/: snapshot_b.txt
kraken/data_capture/: data_capture_analysis.ipynb
kraken/data_capture/20min/: connector_0.txt  connector_1.txt  connector_2.txt  snapshot_0.txt  snapshot_1.txt  snapshot_2.txt  snapshot_3.txt  snapshot_4.txt  snapshot_5.txt  snapshot_6.txt  snapshot_7.txt  snapshot_8.txt  snapshot_9.txt
kraken/data_capture/60min/: snapshot_0.txt  snapshot_2.txt  snapshot_4.txt  snapshot_5.txt  snapshot_7.txt  snapshot_8.txt  snapshot_9.txt
kraken/tests/: test_interrupted.py  test_packets_dropped.py  test_same_ts_diff_data.py  test_trade_update_swap.py
src/: ticker.py
(+119 files in other folders)
